--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
+server:
+  servlet:
+    context-path: /love
+
 spring:
-  active: prd
+  profiles:
+    active: prd
+
 
 mybatis-plus:
   global-config:
@@ -7,3 +13,19 @@ mybatis-plus:
       logic-delete-field: flag # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: FALSE # 逻辑已删除值(默认为 1)
       logic-not-delete-value: TRUE # 逻辑未删除值(默认为 0)
+
+logging:
+  level:
+    root: info
+  pattern:
+    console: '%red(%d{yyyy-MM-dd HH:mm:ss}) %green([%thread]) %highlight(%-5level) %boldMagenta(%logger{10}) - %cyan(%msg%n)'
+    file: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger : %msg%n'
+  file:
+    name: logs/love.log
+    max-size: 100MB
+    max-history: 15
+
+wx:
+  applet:
+    appid: wxae7f80c943e1b694
+    appSecret: 6117094ba349344da58990ebd09292b7
