--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,13 +5,13 @@ spring:
   application:
     name: love
   datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/eighteen?currentSchema=love
-    username: postgresql
-    password: postgresql
+#    driverClassName: org.postgresql.Driver
+    driverClassName: com.p6spy.engine.spy.P6SpyDriver
+    url: jdbc:p6spy:postgresql://localhost:5432/eighteen?currentSchema=love
+    username: postgres
+    password: 123456
   data:
     redis:
-      database: 5
+      database: 0
       host: 127.0.0.1
-      port: 63791
-      password: abcde12345
+      port: 6379
